tests/fixtures/invalid/pow_str_bool_bool.py
# Cannot call pow() with Str, Bool, Bool
x = pow("hello", True, True)
